samples/_failures_safe/1761044910_9196c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9bec207.c: In function ‘main’:
./samples/SAFE/__tmp_f9bec207.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f9bec207.c:168:9: error: expected declaration or statement at end of input
